[package]
name = "spectrogram-rs"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
adw = { version = "0.6.0", package = "libadwaita", features = ["v1_5"] }
gtk = { version = "0.8.1", package = "gtk4", features = ["v4_14"] }
cpal = "0.15.2"
fftw = "0.8.0"
ringbuf = "0.3.3"
ringbuf-blocking = "0.1.0-rc.2"
num-traits = "0.2.17"
async-channel = "2.1.1"
iter_num_tools = "0.7.1"
plotters = "0.3.5"
plotters-cairo = "0.5.0"
plotters-backend = "0.3.5"
itertools = { version = "0.12.0", features = [] }
ndarray = "0.15.6"
colorous = "1.0.12"
dasp = "0.11.0"
biquad = "0.4.2"
