[package]
name = "spectrogram-rs"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
relm4 = { version = "0.9.1", features = ["libadwaita"] }
adw = { version = "0.7.0", package = "libadwaita", features = ["v1_5"] }
gtk = { version = "=0.9.2", package = "gtk4", features = ["v4_16"] }
cpal = "0.15.3"
fftw = "0.8.0"
ringbuf = "0.4.0"
ringbuf-blocking = "0.1.0-rc.3"
num-traits = "0.2.17"
async-channel = "2.1.1"
iter_num_tools = "0.7.1"
plotters = "0.3.5"
plotters-cairo = "0.5.0"
plotters-backend = "0.3.5"
itertools = { version = "0.13.0", features = [] }
ndarray = "0.15.6"
colorous = "1.0.12"
dasp = "0.11.0"
biquad = "0.4.2"
glium = { git = "https://github.com/awused/glium.git", branch = "bad-idea" }
epoxy = "0.1.0"
libloading = "0.8.3"